...
        viewModel(factory = ListProfilesViewModel.Factory)
) {
  val profile =
      listProfilesViewModel.currentProfile.collectAsState().value
          ?: return Text(
              text = "No Profile selected. Should not happen.",
              modifier = Modifier.testTag("editTutorNoProfile"))

  val profileLanguages = remember { mutableStateListOf<Language>() }
  val profileSubjects = remember { mutableStateListOf<Subject>() }
  val coroutineScope = rememberCoroutineScope()
  var localPhotoUri by remember { mutableStateOf<Uri?>(profile.profilePhotoUrl) }
  var isLoading by remember { mutableStateOf(false) }
...

  Scaffold(
      topBar = {
        Row(modifier = Modifier.fillMaxWidth(), verticalAlignment = Alignment.CenterVertically) {
          IconButton(
              onClick = { navigationActions.goBack() },
              modifier = Modifier.testTag("editTutorProfileCloseButton")) {
                Icon(
                    imageVector = Icons.AutoMirrored.Default.ArrowBack,
                    contentDescription = "Go Back")
              }
          Text(
              "Modify your profile information",
              style = MaterialTheme.typography.titleMedium,
              modifier = Modifier.testTag("editTutorProfileInstructionText"))
        }
      },
      content = { paddingValues ->
        Column(
            horizontalAlignment = Alignment.Start,
            modifier =
...
                    maxLines = 4,
                    keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done))

                Text(
                    "Teaching languages:",
                    style = MaterialTheme.typography.titleSmall,
                    modifier = Modifier.testTag("editTutorProfileLanguageText"))
                // Language Selection
                LanguageSelector(profileLanguages)

                Spacer(modifier = Modifier.height(6.dp))

                // Subject Selection
                Text(
                    "Teaching subjects:",
                    style = MaterialTheme.typography.titleSmall,
                    modifier = Modifier.testTag("editTutorProfileSubjectText"))
                SubjectSelector(null, profileSubjects, true)

                Spacer(modifier = Modifier.height(6.dp))

                // Price Selection
                Text(
                    "Tutoring price per hour:",
                    style = MaterialTheme.typography.titleSmall,
                    modifier = Modifier.testTag("editTutorProfilePriceText"))
                PriceSlider(priceSliderValue, listProfilesViewModel.getAveragePrice())

                Button(
                    modifier = Modifier.fillMaxWidth().testTag("updateAvailabilityButton"),
                    shape = MaterialTheme.shapes.medium,
                    onClick = { navigationActions.navigateTo(Screen.EDIT_SCHEDULE) },
...
              }
            }
      },
      bottomBar = {
        // Confirmation Button with Loading State
        Button(
            modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("confirmButton"),
            shape = MaterialTheme.shapes.medium,
            enabled = !isLoading,
            onClick = {
              coroutineScope.launch {
                isLoading = true
                try {
...
