...
  val expandedSubjectDropdown = remember { mutableStateOf(false) }

  val subjects = Subject.entries.toTypedArray()
  Box(modifier = Modifier.fillMaxWidth()) {
    Button(
        onClick = { expandedSubjectDropdown.value = !expandedSubjectDropdown.value },
        modifier = Modifier.fillMaxWidth().testTag("subjectButton")) {
          Text("Select Subjects")
        }
    DropdownMenu(
        expanded = expandedSubjectDropdown.value,
        onDismissRequest = { expandedSubjectDropdown.value = false },
        modifier = Modifier.fillMaxWidth()) {
...
