...
              trailingIcon = {
                ExposedDropdownMenuDefaults.TrailingIcon(expanded = countryCodeExpanded)
              },
              modifier =
                  Modifier.menuAnchor()
                      .fillMaxWidth()
                      .testTag("countryCodeField") // Add test tag here
              )
          ExposedDropdownMenu(
              modifier = Modifier.fillMaxWidth(),
              expanded = countryCodeExpanded,
              onDismissRequest = { countryCodeExpanded = false }) {
                countries.forEach { country ->
...
